[gd_scene load_steps=14 format=3 uid="uid://b85mwwhq3i6so"]

[ext_resource type="Script" path="res://SCRIPTS/TOOLS/shp_class_01_NEW.gd" id="1_57vie"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_u2jvl"]
points = PackedVector3Array(1, 0.25, 0.1, 1, 0.25, -0.1, -1, 0.25, 0.1, 1, -0.25, 0.1, 1, -0.25, -0.1, -1, 0.25, -0.1, -1, -0.25, 0.1, -1, -0.25, -0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jdjq1"]
albedo_color = Color(0.529412, 0.454902, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f50je"]
size = Vector3(2, 0.5, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wrxbl"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_74bx7"]
size = Vector3(2, 0.1, 0.21)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hnhkw"]
points = PackedVector3Array(1, 0.5, 0.1, 1, 0.5, -0.1, -1, 0.5, 0.1, 1, -0.5, 0.1, 1, -0.5, -0.1, -1, 0.5, -0.1, -1, -0.5, 0.1, -1, -0.5, -0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tr68t"]

[sub_resource type="BoxMesh" id="BoxMesh_np01x"]
size = Vector3(2, 1, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6yi24"]

[sub_resource type="Animation" id="Animation_g5q24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kriht"]
resource_name = "loadIN"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtnh4"]
_data = {
"RESET": SubResource("Animation_g5q24"),
"loadIN": SubResource("Animation_kriht")
}

[node name="shp_Class" type="StaticBody3D" groups=["shpCLASS", "template"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_57vie")

[node name="lblField" type="Label3D" parent="."]
billboard = 2
no_depth_test = true
text = "- field1
- field2
- field3"
autowrap_mode = 3

[node name="lblMethod" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
billboard = 2
no_depth_test = true
text = "- attribute01
- attribute02
- attribute03"
autowrap_mode = 3

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 434.5
offset_top = 243.5
offset_right = 677.5
offset_bottom = 364.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter text:"

[node name="Title" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false

[node name="Attribute" type="Node3D" parent="."]
visible = false

[node name="Methods" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0)
visible = false

[node name="collHead" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("ConvexPolygonShape3D_u2jvl")

[node name="lblTitle" type="Label3D" parent="collHead"]
billboard = 2
no_depth_test = true
text = "Title:"
font_size = 36
autowrap_mode = 3

[node name="title" type="MeshInstance3D" parent="collHead" groups=["header"]]
material_override = SubResource("StandardMaterial3D_jdjq1")
mesh = SubResource("BoxMesh_f50je")
skeleton = NodePath("")

[node name="divider" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501626, 0)
material_override = SubResource("StandardMaterial3D_wrxbl")
mesh = SubResource("BoxMesh_74bx7")
skeleton = NodePath("../collHead")

[node name="collBody1" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_hnhkw")

[node name="bodyField" type="MeshInstance3D" parent="collBody1" groups=["body"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.75, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_tr68t")
mesh = SubResource("BoxMesh_np01x")
skeleton = NodePath("")

[node name="lblField" type="Label3D" parent="collBody1"]
visible = false
billboard = 2
no_depth_test = true
text = "- field1
- field2
- field3"
autowrap_mode = 3

[node name="divider2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.557894, 0)
material_override = SubResource("StandardMaterial3D_wrxbl")
mesh = SubResource("BoxMesh_74bx7")
skeleton = NodePath("../collHead")

[node name="collBody2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("ConvexPolygonShape3D_hnhkw")

[node name="bodyMethods" type="MeshInstance3D" parent="collBody2" groups=["body"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.75, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6yi24")
mesh = SubResource("BoxMesh_np01x")
skeleton = NodePath("")

[node name="lblMethod" type="Label3D" parent="collBody2"]
visible = false
billboard = 2
no_depth_test = true
text = "- attribute01
- attribute02
- attribute03"
autowrap_mode = 3

[node name="animP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtnh4")
}
autoplay = "loadIN"
